<resources>

    <!-- application strings -->
    <string name="app_name">BankApp</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet_access">Not Connected To Internet</string>
    <string name="no_network_available">No network found. Please retry or connect to a network. </string>

    <!-- home strings -->
    <string name="bank">Bank Logo</string>
    <string name="residental_button">Residental</string>
    <string name="car_button">Car</string>
    <string name="renovation_button">Renovation</string>

    <!-- search input strings -->
    <string name="find_your_car_text_view">Find Your Car</string>
    <string name="currency_text_view">kr</string>
    <string name="years_text_view">år</string>
    <string name="equity_edit_text">Egenkapital</string>
    <string name="per_month_edit_text">Avsetting per måned</string>
    <string name="repayment_text_view">Nedbetalingstid</string>
    <string name="advanced_search_button">Avansert søk</string>
    <string name="find_cars_button">Find Cars</string>

    <!-- toolbar Strings -->
    <string name="home_button">Home</string>
    <string name="sort_button">Sort</string>
    <string name="filter_button">Filter</string>

    <!-- result drawer strings -->
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="sort_by_text_view">Sort by</string>
    <string name="done_button">Done</string>
    <string-array name="sort_drawer_list">
        <item>Published</item>
        <item>Model</item>
        <item>Lowest Price</item>
        <item>Highest Price</item>
        <item>Lowest Distance</item>
        <item>Most Recent</item>
        <item>Least Recent</item>
        <item>Most Relevant</item>
        <item>Nearest</item>
    </string-array>

    <!-- URLs -->
    <string name="url_search">http://m.finn.no/car/used/search.html?filters&amp;sort=%1$s&amp;page=%2$s"</string>
    <string name="url_car_info">https://m.finn.no/car/used/ad.html?finnkode=%1$s"</string>

    <!-- Connection strings -->
    <string name="connection_error_message">Please check your internet connection and tap "Reload".</string>
    <string name="connection_error_reload">Reload</string>

    <!-- result strings -->
    <string name="progress_message">Searching...</string>
    <string name="search_result_text_view">%1$s results.</string>
    <string name="favorited_text_view">Favorited</string>
    <string name="general_info_text_view">Volkswagen Passat</string>
    <string name="back_to_top_button">Back to top</string>

    <!-- result row strings -->
    <string name="model_text_view">Modell: </string>
    <string name="distance_text_view">Km.stand: </string>
    <string name="model_year_text_view">Årsmodell: </string>

    <!-- description strings -->
    <string name="viewpager_page_text_view">%1$d of %2$d</string>
    <string name="year_text_view">Årsmodell: %1$s</string>
    <string name="price_value_text_view">%1$s kr</string>
    <string name="about_car_text_view">About The Car</string>
    <string name="car_description_text_view">Description</string>

    <!-- transition strings -->
    <string name="image_transition">imageTransition%1$s</string>
    <string name="title_transition">imageTransition%1$s</string>

</resources>