<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    app:layout_scrollFlags="scroll|enterAlways">

    <TextView
        android:id="@+id/homeTextView"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font_larger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button" />

    <Button
        android:id="@+id/sortButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/sort_button"
        android:layout_gravity="right"
        style="@style/toolbarButton" />

    <Button
        android:id="@+id/filterButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/filter_button"
        android:layout_gravity="right"
        style="@style/toolbarButton" />

</android.support.v7.widget.Toolbar>
