<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wilberg.bankapp.MainActivity" >

    <TextView
        android:id="@+id/LogoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/bank"
        android:textSize="@dimen/logo_font_size"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/housingButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/colorPrimary"
        android:text="@string/dwelling_button"
        android:textColor="@color/white"
        android:textSize="@dimen/home_button_font_size"
        android:layout_below="@+id/LogoTextView"
        android:layout_alignLeft="@+id/carButton"
        android:layout_alignStart="@+id/carButton" />

    <Button
        android:id="@+id/carButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/renovationButton"
        android:layout_below="@+id/housingButton"
        android:layout_marginTop="27dp"
        android:background="@color/colorPrimary"
        android:text="@string/car_button"
        android:textColor="@color/white"
        android:textSize="@dimen/home_button_font_size" />

    <Button
        android:id="@+id/renovationButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/renovation_button"
        android:textColor="@color/white"
        android:textSize="@dimen/home_button_font_size" />

</RelativeLayout>