<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableRow1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_table" >

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:weightSum="1" >

		<ImageView
			android:id="@+id/carImageView"
			android:layout_width="83dp"
			android:layout_height="86dp"
			android:scaleType="fitXY"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
			android:layout_weight="1"
            android:paddingLeft="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
				android:paddingBottom="20dp"
                android:weightSum="10" >

                <TextView
                    android:id="@+id/carInfoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
					android:ems="11"
					android:singleLine="true"
                    android:text="@string/general_info_text_view"
					android:paddingTop="5dp" />

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
					android:layout_weight="1"
					android:ems="4"
					android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:text="oslo" />
            
            	</LinearLayout>
            <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:weightSum="5" >

                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
					android:paddingBottom="5dp"/>

                <TextView
                    android:id="@+id/distanceTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
					android:paddingLeft="10dp"
					android:paddingBottom="5dp"/>
                
        		</LinearLayout>
       	 	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:weightSum="5" >

                <TextView
                    android:id="@+id/modelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
					android:text="@string/model_text_view" />

                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
					android:paddingLeft="10dp"
                    android:text="@string/model_year_text_view" />

                </LinearLayout>
        </LinearLayout>
	</LinearLayout>

</TableRow>

